# open-webui-customizer

./: .env.example  .gitignore  .gitmodules  DOCUMENTATION.md  Dockerfile  Makefile  NOTICE.md  README.md  TESTING.md  alembic.ini  build.sh  clean.sh  publish.sh  requirements.txt  run.py  source.sh  start.sh  test_app.py  test_tiered_settings.py
open-webui-customizer-django/: .env.example  .pre-commit-config.yaml  =6.0  MIGRATION_PROGRESS.md  Makefile  README.md  pyproject.toml  pytest.ini
open-webui-customizer-django/apps/branding/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
open-webui-customizer-django/apps/branding/api/: serializers.py  urls.py  views.py
open-webui-customizer-django/apps/branding/migrations/: 0001_initial.py
open-webui-customizer-django/apps/branding/tests/: __init__.py  test_models.py
open-webui-customizer-django/apps/core/: admin.py  exceptions.py  logging.py  models.py
open-webui-customizer-django/apps/core/api/: __init__.py
open-webui-customizer-django/apps/core/tests/: __init__.py  factories.py  test_models.py
open-webui-customizer-django/apps/credentials/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
open-webui-customizer-django/apps/credentials/api/: serializers.py  urls.py  views.py
open-webui-customizer-django/apps/dashboard/: __init__.py  admin.py  urls.py  views.py
open-webui-customizer-django/apps/pipelines/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
open-webui-customizer-django/apps/pipelines/api/: serializers.py  (+2 more)
open-webui-customizer-django/apps/registries/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
open-webui-customizer-django/apps/repositories/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
open-webui-customizer-django/apps/tests/: __init__.py
open-webui-customizer-django/config/: admin.py  settings.py  urls.py
open-webui-customizer-django/config/settings/: __init__.py  base.py  development.py  production.py  staging.py  test.py
open-webui-customizer-django/requirements/: base.txt  development.txt  production.txt  staging.txt
open-webui-customizer-django/static/css/: main.css
open-webui-customizer-django/templates/: base.html
open-webui-customizer-django/templates/branding/: detail.html  form.html  list.html
open-webui-customizer-django/templates/credentials/: detail.html  form.html  list.html
open-webui-customizer-django/templates/dashboard/: index.html
open-webui-customizer-django/templates/pipelines/: detail.html  form.html  list.html
open-webui-customizer-django/templates/registries/: detail.html  form.html  list.html
open-webui-customizer-django/templates/repositories/: detail.html  form.html  list.html
(+112 files in other folders)
